gcc/testsuite/rust/rustc/ui/issues/issue-73541.rs
fn main() {
    'a: loop {
        || {
            loop { continue 'a }
// { dg-error ".E0767." "" { target *-*-* } .-1 }
        };

    }
}

